[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.4.0"
worker = "0.0.17"
serde = { version = "1.0.160", default-features = false }
serde_json = "1.0.96"
futures-util = "0.3.28"
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
